// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SystemGuarantee Component renders correctly 1`] = `
<div
  class="body"
>
  <div
    class="body__title"
  >
    <h2
      class="MuiTypography-root Typography MuiTypography-h6"
    >
      BMI-NO-PROD-001
    </h2>
  </div>
  <div>
    <h6
      class="MuiTypography-root Typography MuiTypography-subtitle2"
    />
  </div>
  <div
    class="body__footer"
  >
    <button
      class="MuiButtonBase-root MuiButton-root buttonStyles-root-1 MuiButton-outlined MuiButton-outlinedPrimary Mui-disabled Mui-disabled"
      disabled=""
      rel="noopener noreferrer"
      tabindex="-1"
      target="_blank"
      type="button"
    >
      <span
        class="MuiButton-label buttonStyles-label-4"
      >
        <span
          class="MuiButton-startIcon buttonStyles-startIcon-5 MuiButton-iconSizeMedium"
        >
          <svg
            class="body__logo"
          />
        </span>
        generatingPdf
      </span>
    </button>
  </div>
</div>
`;

exports[`SystemGuarantee Component renders correctly with download button 1`] = `
<div
  class="body"
>
  <div
    class="body__title"
  >
    <h2
      class="MuiTypography-root Typography MuiTypography-h6"
    >
      BMI-NO-PROD-001
    </h2>
  </div>
  <div>
    <h6
      class="MuiTypography-root Typography MuiTypography-subtitle2"
    />
  </div>
  <div
    class="body__footer"
  >
    <a
      aria-disabled="false"
      class="MuiButtonBase-root MuiButton-root buttonStyles-root-21 MuiButton-outlined MuiButton-outlinedPrimary"
      href="signed-url"
      rel="noopener noreferrer"
      tabindex="0"
      target="_blank"
    >
      <span
        class="MuiButton-label buttonStyles-label-24"
      >
        <span
          class="MuiButton-startIcon buttonStyles-startIcon-25 MuiButton-iconSizeMedium"
        >
          <svg
            class="body__logo"
          />
        </span>
        SavePdf
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </a>
  </div>
</div>
`;
